# meal_planner_rust

./: Cargo.toml  database.db  recipes-2024-06-13.txt  schema.sql  shopping-list-2024-06-13.txt
.sqlx/: query-1dc48fa5aade651aa37b0550fcb59531716f5b20d93edccbc4b497e646d7f467.json  query-1f70b03acbc1c43272d86e3ec7b1c78722a7875135c33edf8dec3c4c678c0616.json  query-3ac87db49fe5031f5f5b3a3e71c64c76c5fc6ac539f6d86cfc95a68b70518f7e.json  query-448310d42dc7e3c12afe8e3f337b01077b5c4dd479b6da1ffab85e58d92f0f12.json  query-5cf97db0e3c41cfd3365ac247863006183820bf5518a288fd60c275a7ce29263.json  query-5d1575e94653a70172648015c9371697f0c3f870b5750d57cdae4eaef6006712.json  query-6a04791cdb1279acb7a6759a88ff29ed2844a578ec6a037bf7b15caeab973d3a.json  query-80171af968ab65264be93fc774aa0b1765dca5569257c609dba3c488dd7cd678.json  query-9d2df0a613de7204c55d5b925ffa8d053a8f620a9c24e17b8760a5c05a252c04.json  query-a292a474540736380d5c7d149ece774733551186135169c58785d9cb2e120a02.json  query-af89c0cda1e2925295e560789fbabe79e75daa90b3b33c2e8499381e54501645.json  query-c9623ee4a9d848d35e26d20e68feb166b58f3eb464e11c9bfa497c094d55b85f.json  query-cb8b2cf0a2d46a33f4c2711aaf4c602831ce48d8bae0561218aeae71ed4b6f13.json  query-d91a9597611e21580f3995c77236ee204da1f33be7bcf32fb96f887955572369.json  query-e1789822ab24a5084d667c2f788a04ffc79a299a441bfa10405b72b828eba33c.json  query-eee1820a6d3e2b93884d96821dbd97251c6ae08419974ea6e8972d00336be662.json
src/: lib.rs  main.rs
