[package]
name = "meal_planner"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
dotenv = "0.15.0"
futures = "0.3.30"
reqwest = { version = "0.12.4", features = ["json"] }
serde = "1.0.203"
spinoff = "0.8.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }
text_io = "0.1.12"
thiserror = "1.0.61"
tokio = { version = "1.38.0", features = ["full"] }
